# nicr-multitask-scene-analysis

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
nicr_mt_scene_analysis/: __init__.py  checkpointing.py  logging.py  types.py  version.py
nicr_mt_scene_analysis/data/: __init__.py  _dataloader.py
nicr_mt_scene_analysis/data/preprocessing/: __init__.py  crop.py  instance.py  multiscale_supervision.py  orientation.py  panoptic.py  resize.py  semantic.py  torch.py  utils.py
nicr_mt_scene_analysis/loss/: __init__.py  base.py  ce.py
nicr_mt_scene_analysis/metric/: __init__.py  mae.py  miou.py  pq.py  rmse.py
nicr_mt_scene_analysis/model/: encoder.py  encoder_decoder_fusion.py  encoder_fusion.py  normalization.py  upsampling.py  utils.py
nicr_mt_scene_analysis/model/backbone/: __init__.py  base.py  resnet.py  swin.py  swin_multimodal.py
nicr_mt_scene_analysis/model/context_module/: __init__.py  appm.py  none.py  ppm.py
nicr_mt_scene_analysis/model/decoder/: __init__.py  dense_base.py  instance.py  mlp_base.py  normal.py  scene.py  semantic.py
nicr_mt_scene_analysis/model/postprocessing/: base.py  normal.py  (+4 more)
nicr_mt_scene_analysis/task_helper/: base.py  instance.py  normal.py  panoptic.py  scene.py  semantic.py
nicr_mt_scene_analysis/testing/: __init__.py  dataset.py  model.py  onnx.py  preprocessing.py
nicr_mt_scene_analysis/utils/: __init__.py  _misc.py  _orientation.py  _printing.py  _torch.py  panoptic_merge.py
nicr_mt_scene_analysis/visualization/: __init__.py  _pil.py  depth.py  generic.py  graph.py  instance.py  normal.py  panoptic.py  semantic.py
requirements/: base.txt  test.txt  torch.txt
src/nicr_mt_scene_analysis/: __init__.py  checkpointing.py  logging.py  multi_task.py  types.py  version.py
tests/: conftest.py  test_backbones.py  test_context_modules.py  test_decoders+postprocessing.py  test_encoder_fusion.py  test_encoders.py  test_instance_postprocessing.py  test_loss_functions.py  test_loss_weighting.py  test_merge.py  test_metrics.py  test_miou.py  test_preprocessing.py  test_sampler.py
(+84 files in other folders)
